--- a/docs/notebooks/pytorch/convolutional_neural_network.ipynb
+++ b/docs/notebooks/pytorch/convolutional_neural_network.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "481cd17e-0e18-4995-9601-835213f1d534",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install git+https://github.com/simonpf/ipwgml#ipwgml[complete]"
+    "#!pip install ipwgml[complete]@git+https://github.com/simonpf/ipwgml"
    ]
   },
   {
@@ -1652,7 +1652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
