Add note regarding short training.

--- a/docs/notebooks/pytorch/convolutional_neural_network.ipynb
+++ b/docs/notebooks/pytorch/convolutional_neural_network.ipynb
@@ -505,7 +505,11 @@
    "id": "0bf6d261-6a8a-468d-abfc-e1e2e8da5339",
    "metadata": {},
    "source": [
-    "### Running the training"
+    "### Running the training\n",
+    "\n",
+    "Below we use the [PyTorch Lightning](https://github.com/Lightning-AI/pytorch-lightning) to run a quick training of the CNN model.\n",
+    "\n",
+    "> **Note:** The training is intentionally kept short in this example. To train the model properly, you should run the training on the ``xl`` subset and ensure that the model is trained until convergence.\n"
    ]
   },
   {
