--- a/docs/notebooks/evaluate_gprof.ipynb
+++ b/docs/notebooks/evaluate_gprof.ipynb
@@ -259,8 +259,8 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from ipwgml.evaluation import Evaluator\n",
-    "from ipwgml.target import TargetConfig\n",
+    "from satrain.evaluation import Evaluator\n",
+    "from satrain.target import TargetConfig\n",
     "\n",
     "geometry = \"native\"\n",
     "evaluator = Evaluator(\n",
@@ -294,7 +294,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniconda3/envs/ipwgml/lib/python3.10/site-packages/cartopy/mpl/geoaxes.py:1601: UserWarning: The following kwargs were not used by contour: 'linewidth'\n",
+      "/home/simon/miniconda3/envs/satrain/lib/python3.10/site-packages/cartopy/mpl/geoaxes.py:1601: UserWarning: The following kwargs were not used by contour: 'linewidth'\n",
       "  result = super().contour(*args, **kwargs)\n"
      ]
     },
