--- a/docs/notebooks/evaluate_imerg.ipynb
+++ b/docs/notebooks/evaluate_imerg.ipynb
@@ -40,8 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipwgml.target import TargetConfig\n",
-    "from ipwgml.evaluation import Evaluator\n",
+    "from satrain.target import TargetConfig\n",
+    "from satrain.evaluation import Evaluator\n",
     "\n",
     "target_config = TargetConfig(min_rqi=0.5)\n",
     "evaluator = Evaluator(\n",
@@ -690,7 +690,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/ipwgml/lib/python3.11/site-packages/cartopy/mpl/geoaxes.py:1600: UserWarning: The following kwargs were not used by contour: 'linewidth'\n",
+      "/home/simon/miniforge3/envs/satrain/lib/python3.11/site-packages/cartopy/mpl/geoaxes.py:1600: UserWarning: The following kwargs were not used by contour: 'linewidth'\n",
       "  result = super().contour(*args, **kwargs)\n"
      ]
     },
@@ -751,7 +751,7 @@
     }
    ],
    "source": [
-    "from ipwgml import metrics\n",
+    "from satrain import metrics\n",
     "evaluator.evaluate(retrieval_fn=retrieve_imerg, n_processes=8)"
    ]
   },
