--- a/docs/notebooks/input_and_target_data.ipynb
+++ b/docs/notebooks/input_and_target_data.ipynb
@@ -558,11 +558,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/gridded/spatial/gmi\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -980,11 +980,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/gridded/tabular/gmi\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -1609,11 +1609,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/gridded/spatial/ancillary\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -2047,11 +2047,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/gridded/tabular/ancillary\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -2537,11 +2537,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/gridded/spatial/geo\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -2976,11 +2976,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/on_swath/tabular/ancillary\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -3488,11 +3488,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/gridded/spatial/geo_ir\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -3904,11 +3904,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/on_swath/tabular/geo_ir\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -4461,11 +4461,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/on_swath/spatial/target\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   },
   {
@@ -4889,11 +4889,11 @@
    ],
    "source": [
     "import xarray as xr\n",
-    "from ipwgml.data import list_files\n",
-    "from ipwgml.config import get_data_path\n",
+    "from satrain.data import list_files\n",
+    "from satrain.config import get_data_path\n",
     "files = list_files(\"spr/gmi/training/on_swath/tabular/target\")\n",
-    "ipwgml_path = get_data_path()\n",
-    "xr.load_dataset(ipwgml_path / files[0])"
+    "satrain_path = get_data_path()\n",
+    "xr.load_dataset(satrain_path / files[0])"
    ]
   }
  ],
