--- a/docs/getting_started.ipynb
+++ b/docs/getting_started.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a57d297a-27c3-405c-9258-920217972d7e",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "['gmi', 'ancillary', 'target']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,19 +73,19 @@
    "source": [
     "## Configuring the Data Location\n",
     "\n",
-    "The ``satrain`` package expects the data files of the SatRain dataset to be located in a special path called the ``satrain_data_path``.  ``satrain`` does its best to keep track of the data path between subsequent\n",
+    "The ``satrain`` package expects the data files of the SatRain dataset to be located in a special path called the *satrain data path*.  ``satrain`` does its best to keep track of the data path between subsequent\n",
     "invocations to avoid downloading data multiple times.\n",
     "\n",
-    "After a fresh install, the ``data_path`` will be initialized to the current working directory from which the first download is invoked.\n",
-    "To set an explicit data path, you can use the ``satrain config set_data_path`` command. This will create a ``satrain`` configuration file in the\n",
+    "After a fresh install, the satrain data path be initialized to the working directory from which the first data download is invoked.\n",
+    "To set the data path explicitly, you can use the ``satrain config set_data_path`` command. This will create a ``satrain`` configuration file in the\n",
     "current user's configuration directory, which will allow the setting to persist for subsequent use of the ``satrain`` package. A configuration file storing the\n",
     "``data_path`` will also be created when the first data download is invoked.\n",
     "\n",
-    "Alternatively, the ``data_path`` can be set using the ``SATRAIN_DATA_PATH`` environment\n",
+    "Alternatively, the satrain data path can be set using the ``SATRAIN_DATA_PATH`` environment\n",
     "variable. The path in ``SATRAIN_DATA_PATH`` will overwrite the setting in the user's configuration\n",
     "file.\n",
     "\n",
-    "The ``satrain config show`` command can be used to find out the value of the ``satrain`` data path\n",
+    "The ``satrain config show`` command can be used to check the current value of the ``satrain`` data path\n",
     "and how it is derived:\n",
     "\n",
     "```\n",
@@ -107,13 +107,12 @@
     "\n",
     "This will download the gridded SatRain training, validation, and testing data. The ``satrain download`` command takes the following options:\n",
     "\n",
-    " - ``--sensors`` A comma-separated lists of the sensors for which to download the data.\n",
+    " - ``--base_sensors`` A comma-separated lists of the base sensors for which to download the data (``gmi``, ``atms``, or ``gmi,atms`` for both).\n",
     " - ``--subset`` The size of the subset to download. Choose ``xl`` for the full dataset.\n",
-    " - ``--splits`` A comma-separated lists of the data splits to download. Available options are ``training``, ``validation``, ``testing``, and ``evaluation``.\n",
+    " - ``--splits`` A comma-separated lists of the data splits to download. Available options are ``training``, ``validation``, and ``testing``.\n",
     " - ``--geometries`` A comma-separated lists of the data geometries. Available options are ``gridded`` for gridded\n",
     "   observations and ``on_swath`` for the data on the PMW swath.\n",
-    " - ``--inputs`` A comma-separated list of the input data to download. Available options are ``ancillary``, ``geo``, ``geo_ir`` and ``pmw``.\n",
-    " - ``--formats`` A comma-separated list of the data formats to download. Available options are ``spatial`` for 2D\n",
+    " - ``--inputs`` A comma-separated list of the input data to download. Available options are ``atms``, ``gmi``, ``geo``, ``geo_t``, ``geo_ir``, ``geo_ir_t``, and ``ancillary``. The precipitation reference data is always downloaded.\n",
     "   training scenes and ``tabular`` for tabular data.\n",
     "   \n",
     "   \n",
