Fix link to repository.

--- a/docs/notebooks/pytorch/convolutional_neural_network.ipynb
+++ b/docs/notebooks/pytorch/convolutional_neural_network.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install satrain[complete]@git+https://github.com/simonpf/satrain"
+    "#!pip install satrain[complete]@git+https://github.com/ipwgml/satrain"
    ]
   },
   {
