Update references to old dataset name.

--- a/docs/notebooks/pytorch/convolutional_neural_network.ipynb
+++ b/docs/notebooks/pytorch/convolutional_neural_network.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "source": [
     "## The training data\n",
-    "The SPR dataset comes in two input-data formats: *tabular* and *spatial*. The term *spatial* is used here to denote input data in 2D or image structure.\n",
-    "The ``satrain.pytorch.dataset.SPRSpatial`` implements the PyTorch dataset interface for loading SPR data in spatial format."
+    "The ``satrain`` package provides two PyTorch dataset to access the SatRain data: One for *tabular* and one for *spatial*. The term *spatial* is used here to denote input data in 2D or image structure.\n",
+    "The ``satrain.pytorch.dataset.SatRainSpatial`` implements the PyTorch dataset interface for loading SatRain data in spatial format."
    ]
   },
   {
