--- a/docs/notebooks/evaluate_gprof.ipynb
+++ b/docs/notebooks/evaluate_gprof.ipynb
@@ -38,7 +38,7 @@
    "id": "c7d30b12-6db1-457e-bd20-310ccfa5bc57",
    "metadata": {},
    "source": [
-    "To evaluate GPROF retrievals with the Evaluator class, a retrieval callback function is required. This function returns GPROF retrieval results for each of the collocation scenes in the SPR evaluation dataset. Since the scenes in the SPR dataset for GMI correspond to GMI overpasses over the MRMS domain, they map directly to GPROF result files. The ``input_data`` dataset that the evaluator passes to the retrieval callback function includes the name of the GPM L1C file from which the collocation was created as well as the scan range. This structure makes it straightforward to load the corresponding results from the GPROF L2A file with the matching granule number."
+    "To evaluate GPROF retrievals with the Evaluator class, a retrieval callback function is required. This function returns GPROF retrieval results for each of the collocation scenes in the SatRain test dataset. Since the scenes in the SatRain dataset for GMI correspond to GMI overpasses over the MRMS domain, they map directly to GPROF result files. The ``input_data`` dataset that the evaluator passes to the retrieval callback function includes the name of the GPM L1C file from which the collocation was created as well as the scan range. This structure makes it straightforward to load the corresponding results from the GPROF L2A file with the matching granule number."
    ]
   },
   {
@@ -147,7 +147,7 @@
    "source": [
     "## The retrieval callback\n",
     "\n",
-    "With the helper functions in place, it is easy to to implement a retrieval callback function. The function extracts the granule number and scan range from the attributes of the ``input_data`` dataset and then uses the two helper functions above to load the corresponding data from the GPROF file. Note that the evaluator will take care of mapping the swath-based estimates from GPROF to the regular latitude-longitude grid used for the SPR dataset."
+    "With the helper functions in place, it is easy to to implement a retrieval callback function. The function extracts the granule number and scan range from the attributes of the ``input_data`` dataset and then uses the two helper functions above to load the corresponding data from the GPROF file. Note that the evaluator will take care of mapping the swath-based estimates from GPROF to the regular latitude-longitude grid used for the SatRain dataset."
    ]
   },
   {
@@ -156,7 +156,7 @@
    "id": "4d054488-7b4e-471c-8409-1c1b64b19c95",
    "metadata": {},
    "outputs": [],
-   "source": "def retrieve_gprof(input_data: xr.Dataset) -> xr.Dataset:\n    \"\"\"\n    Retrieval callback function to load GPROF data corresponding to SATRAIN SPR evaluation data.\n\n    Args:\n        input_data: An xarray.Dataset containing the retrieval input data.\n\n    Return:\n        An xarray.Dataset containing the retrieval results.\n    \"\"\"\n    input_file = input_data.attrs[\"gpm_input_file\"]\n    scan_start = input_data.attrs[\"scan_start\"]\n    scan_end = input_data.attrs[\"scan_end\"]\n    granule = get_granule(input_file)\n    gprof_file = gprof_files[granule]\n    return load_gprof_precip(gprof_file, scan_start, scan_end)"
+   "source": "def retrieve_gprof(input_data: xr.Dataset) -> xr.Dataset:\n    \"\"\"\n    Retrieval callback function to load GPROF data corresponding to SATRAIN SatRain evaluation data.\n\n    Args:\n        input_data: An xarray.Dataset containing the retrieval input data.\n\n    Return:\n        An xarray.Dataset containing the retrieval results.\n    \"\"\"\n    input_file = input_data.attrs[\"gpm_input_file\"]\n    scan_start = input_data.attrs[\"scan_start\"]\n    scan_end = input_data.attrs[\"scan_end\"]\n    granule = get_granule(input_file)\n    gprof_file = gprof_files[granule]\n    return load_gprof_precip(gprof_file, scan_start, scan_end)"
   },
   {
    "cell_type": "markdown",
