--- a/docs/notebooks/pytorch/fully_connected.ipynb
+++ b/docs/notebooks/pytorch/fully_connected.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Fully-connected neural network retrieval\n",
     "\n",
-    "This notebook implements a precipitation retrieval for the IPWG SPR dataset based on a fully-connected neural network implemented using [PyTorch](https://pytorch.org/) and [Lightning](https://lightning.ai/docs/pytorch/stable/)."
+    "This notebook implements a precipitation retrieval for the IPWG SatRain dataset based on a fully-connected neural network implemented using [PyTorch](https://pytorch.org/) and [Lightning](https://lightning.ai/docs/pytorch/stable/)."
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "## The training data\n",
     "\n",
-    "The ``satrain`` package provides dataset classes that take care of downloading, preprocessing and loading of the SPR training data. The ``satrain.pytorch.dataset.SPRTabular`` class implements the PyTorch dataset interface for the SPR data in tabular format, i.e., for pixel-based retrievals."
+    "The ``satrain`` package provides dataset classes that take care of downloading, preprocessing and loading of the SatRain training data. The ``satrain.pytorch.dataset.SatRainTabular`` class implements the PyTorch dataset interface for the SatRain data in tabular format, i.e., for pixel-based retrievals."
    ]
   },
   {
@@ -47,7 +47,7 @@
     "\n",
     "For this example notebook we use only GMI observations as input. We configure the ``GMI`` input to not include the earth-incidence angles. Moreover, enable minimum-maximum normalization of the input and replace NAN values with -1.5.\n",
     "\n",
-    "> **NOTE**: Both input and reference data in the SPR dataset may contain NANs because observations or precipitation estimates may be missing or of insufficient quality. It is up to the user to handle those.\n",
+    "> **NOTE**: Both input and reference data in the SatRain dataset may contain NANs because observations or precipitation estimates may be missing or of insufficient quality. It is up to the user to handle those.\n",
     "\n",
     "We choose the ``on_swath`` geometry for the retrieval, which is a natural choice for pixel-based retrievals. We also set up batching in the dataset, which is more efficient for tabular data than leaving it to the PyTorch data loader to perform the batching."
    ]
