Fix link to repository.

--- a/docs/getting_started.ipynb
+++ b/docs/getting_started.ipynb
@@ -8,7 +8,7 @@
     "# Getting started\n",
     "\n",
     "The easiest way to get started using the SatRain dataset is through the ``satrain`` Python package. While the full dataset can be\n",
-    "manually downloaded from [here](https://rain.atmos.colostate.edu/ipwgml/satrain/), the ``satrain`` package provides functionality to automate the data download and the loading of the training and testing data.\n",
+    "manually downloaded from [here](https://rain.atmos.colostate.edu/ipwgml2/), the ``satrain`` package provides functionality to automate the data download and the loading of the training and testing data.\n",
     "\n",
     "\n",
     "## Installing the ``satrain`` package\n",
@@ -16,11 +16,11 @@
     "To install the latest version of satrain, use the following command:\n",
     "\n",
     "```\n",
-    "pip install satrain[complete]@git+https://github.com/satrain/satrain\n",
+    "pip install satrain[complete]@git+https://github.com/ipwgml/satrain\n",
     "```\n",
     "\n",
     "> **Note**: The above command installs all dependencies required to run the examples included here. If\n",
-    "this is a concern, use ``pip install git+https://github.com/satrain/satrain`` for a minimal installation.\n",
+    "this is a concern, use ``pip install git+https://github.com/ipwgml/satrain`` for a minimal installation.\n",
     "\n",
     "## Accessing the Data\n",
     "\n",
