--- a/docs/notebooks/pytorch/fully_connected.ipynb
+++ b/docs/notebooks/pytorch/fully_connected.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install satrain[complete]@git+https://github.com/satrain/satrain"
+    "#!pip install satrain[complete]@git+https://github.com/ipwgml/satrain"
    ]
   },
   {
